--- a/booksmith_proj/templates/accounts/update_profile_picture.html
+++ b/booksmith_proj/templates/accounts/update_profile_picture.html
@@ -43,13 +43,14 @@
                 </div>
               </div>
               <hr class="border-light m-0" />
-              <div class="card-body">
+              <!-- deleted for now to be implemented -->
+              <!-- <div class="card-body">
                 <div class="form-group">
                   <label class="form-label">Birthdate</label>
                   {{ form.birthdate }}
-                  <!-- Use form field for birthdate -->
+
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
