--- a/booksmith_proj/templates/base.html
+++ b/booksmith_proj/templates/base.html
@@ -81,7 +81,7 @@
           <div class="profile-dropdown">
             <button class="profile-btn">
               <img
-                src="{% if user.profile.image %}{{ user.profile.image.url }}{% else %}{% static 'images/default_avatar.png' %}{% endif %}"
+                src="{% if user.profile.image %}{{ user.profile.image.url }}{% else %}{% static 'images/default-pic.png' %}{% endif %}"
                 alt="Profile Picture"
                 class="profile-pic"
               />
