--- a/booksmith_proj/templates/accounts/update_profile_picture.html
+++ b/booksmith_proj/templates/accounts/update_profile_picture.html
@@ -29,7 +29,7 @@
             <div class="tab-pane fade active show" id="account-general">
               <div class="card-body media align-items-center">
                 <img
-                  src="{% if profile.image %}{{ profile.image.url }}{% else %}{% static 'images/default_avatar.png' %}{% endif %}"
+                  src="{% if profile.image %}{{ profile.image.url }}{% else %}{% static 'images/default-pic.png' %}{% endif %}"
                   alt="Profile Picture"
                   class="d-block ui-w-80"
                 />
