--- a/booksmith_proj/templates/accounts/checkout.html
+++ b/booksmith_proj/templates/accounts/checkout.html
@@ -106,14 +106,14 @@
         {% for item in cart_items %}
         <li class="cart-summary-item" id="cart-item-{{ item.book.id }}">
           <img
-            src="{{ item.book.image_url }}"
+            src="{{ item.book.thumbnail_image_url }}"
             alt="{{ item.book.title }}"
             class="cart-summary-image"
           />
           <div class="cart-summary-details">
             <span>
               {{ item.book.title }}
-              <span class="quantity">(x{{ item.quantity }})</span>
+              
             </span>
     
             {% if item.book.discounted_price and item.book.discounted_price < item.book.price %}
@@ -186,7 +186,7 @@
         "X-CSRFToken": "{{ csrf_token }}",
       },
       success: function (response) {
-        alert("Item removed from cart!");
+       
         location.reload();
       },
       error: function (xhr) {
