--- a/booksmith_proj/templates/accounts/signup.html
+++ b/booksmith_proj/templates/accounts/signup.html
@@ -47,7 +47,7 @@
           required
         />
       </div>
-      <div class="input-group">
+      <!-- <div class="input-group">
         <label for="email">Email</label>
         <input
           type="email"
@@ -56,7 +56,7 @@
           placeholder="Email"
           required
         />
-      </div>
+      </div> -->
       <div class="input-group">
         <label for="pass1">Password</label>
         <input
